--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Fuse React - Material Design Admin Template</title>
+        <title>Applicab</title>
 
         <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
@@ -217,7 +217,7 @@
                 <div class="center">
 
                     <div class="logo">
-                        <img width="128" src="assets/images/logos/fuse.svg" alt="logo">
+                        <img width="128" src="assets/images/logos/applicab.svg" alt="logo">
                     </div>
 
                     <!-- Material Design Spinner -->
