--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
         <base href="/">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link href="%PUBLIC_URL%/assets/tailwind-base.css" rel="stylesheet">
 
         <!--
