--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,21 @@
     </style>
     <!-- / FUSE Splash Screen CSS -->
   </head>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = "https://embed.tawk.to/62667f2c7b967b11798c5e85/1g1g61hbc";
+      s1.charset = "UTF-8";
+      s1.setAttribute("crossorigin", "*");
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root" class="flex">
