changes as requirement

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Fuse React - Material design admin template with pre-built apps and pages"
+      content="AppliCab crée et maintient le lien entre l’avocat et son client"
     />
     <meta
       name="keywords"
